# akouo

./: .gitignore  ACCOUNTABLE_LISTENING.md  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SKILL_INDEX.md  SYSTEM_GUIDE.md  akouo.manifest.json  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release-validation.yml
app/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  main.tsx  styles.css
commands/: access.md  audiovision.md  covenant.md  fiction.md  field.md  forensic.md  full-ear.md  listen.md  litany.md  method.md  one-sound-many-ears.md  reference.md  remember.md  route.md  study.md  tech.md  transduce.md  voice.md
evals/: public-mvp-checklist.md
examples/: reference-map-example.json  routing-plan-example.json  v0.4-expanded-listening-examples.json  v0.6-memory-lineage-example.json  v0.8-accountable-listening-example.json
presets/: presets.json
schemas/: command-output.schema.json  comparative-listening-output.schema.json  covenant.schema.json  manifest.schema.json  preset.schema.json  router-output.schema.json  routing-plan.schema.json
scripts/: start-akouo-lan.sh  validate-examples.mjs  validate-release.sh
skills/accessibility-normative-listening/: SKILL.md
skills/acoulogical-object-listening/: SKILL.md
skills/akouo-router/: SKILL.md
skills/audiovisual-scenic-listening/: SKILL.md
skills/critical-political-listening/: SKILL.md
skills/ecological-posthuman-listening/: SKILL.md
skills/embodied-affective-listening/: SKILL.md
skills/forensic-archival-listening/: SKILL.md
(+43 files in other folders)
