[project]
name = "akouo-contract"
version = "0.8.0"
description = "Packaged AKOÚŌ listening skills, routes, presets, and JSON contracts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sonic Field Labs" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akouo_contract"]

[tool.hatch.build.targets.wheel.force-include]
"akouo.manifest.json" = "akouo_contract/data/akouo.manifest.json"
"schemas" = "akouo_contract/data/schemas"
"presets" = "akouo_contract/data/presets"
"skills" = "akouo_contract/data/skills"
"commands" = "akouo_contract/data/commands"
"SYSTEM_GUIDE.md" = "akouo_contract/data/SYSTEM_GUIDE.md"
